@@ -10,6 +10,8 @@ bzr-svn 0.5.0					UNRELEASED
 
    * Use most appropriate mapping when setting tags for a branch. (#322856)
 
+   * Fixed handling of branch roots moving. (#295416)
+
   FEATURES
 
    * Added basic implemention of "bzr check" on Subversion
